[package]
name = "blau"
version = "0.1.0"
authors = ["CJ Carey <perimosocordiae@gmail.com>"]
edition = "2018"

[lib]
name = "blau"
crate-type = ["cdylib"]

[dependencies]
cpython = { version = "0.6", features = ["extension-module"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
