[package]
name = "blau"
version = "0.1.2"
authors = ["CJ Carey <perimosocordiae@gmail.com>"]
edition = "2021"

[lib]
name = "blau"
crate-type = ["cdylib", "rlib"]

[dependencies]
cpython = { version = "0.7", features = ["extension-module"], optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
