[package]
name = "blau"
version = "0.1.3"
authors = ["CJ Carey <perimosocordiae@gmail.com>"]
edition = "2024"

[lib]
name = "blau"
crate-type = ["cdylib", "rlib"]

[dependencies]
cpython = { version = "0.7", features = ["extension-module"], optional = true }
rand = "0.9"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
